--- a/example/jqlite.html
+++ b/example/jqlite.html
@@ -35,6 +35,7 @@
             $('#bonus').element.hidden = !$('#bonus').element.hidden;
           }
         );
+        $('#pic2').html('<br /><hr/>');
       });
 		</script>
 		<style>
@@ -58,6 +59,9 @@
 			button {
 				margin: 0px 85px;
 			}
+      .red {
+        background: red;
+      }
 		</style>
 	</head>
 
@@ -78,5 +82,8 @@
 		<div id='bonus' hidden>
 			<button onclick='f2(Math.floor(Math.random() * 3), this);' style='margin:auto;'>click for a random picture</button>
 		</div>
+    <div onclick="$(this).addClass('red');" style="width:500px;height:500px;">
+
+    </div>
 	</body>
 </html>
